--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,14 @@
     "@clerk/express": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^4.21.2",
+    "express": "^5.1.0",
     "inngest": "^3.40.1",
     "mongoose": "^8.16.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "overrides": {
+    "debug": "^4.3.4"
   }
 }
