--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,18 +1,12 @@
 {
     "version": 2,
-    "builds": [
-    {
-    "src": "src/server.js",
-    "use": "@vercel/node"
-    }
-    ],
+    "functions": {
+      "api/server.js": {
+        "runtime": "nodejs18.x"
+      }
+    },
     "routes": [
-    {
-    "src": "/(.*)",
-    "dest": "src/server.js"
-    }
-    ],
-    "env": {
-    "NODE_ENV": "production"
-    }
-}
+      { "src": "/(.*)", "dest": "api/server.js" }
+    ]
+  }
+  
