--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,12 +1,19 @@
 {
     "version": 2,
-    "functions": {
-      "api/server.js": {
-        "runtime": "nodejs18.x"
+    "builds": [
+      {
+        "src": "src/server.js",
+        "use": "@vercel/node"
       }
-    },
+    ],
     "routes": [
-      { "src": "/(.*)", "dest": "api/server.js" }
-    ]
+      {
+        "src": "/(.*)",
+        "dest": "src/server.js"
+      }
+    ],
+    "env": {
+      "NODE_ENV": "production"
+    }
   }
   
